@@ -27,3 +27,5 @@ nohup /opt/sterling/build/startIntegrationServer.sh VSIReleaseSTHOrder "-Xms512m
 nohup /opt/sterling/build/agentserver_mod.sh VSIScheduleOrder "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
 
 nohup /opt/sterling/build/startIntegrationServer.sh VSIScheduleBOPUSOrder "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
+
+nohup /opt/sterling/build/startIntegrationServer.sh VSIMixedOrderFraudCheck "-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m" > /dev/null 2>&1 &
